...
            setCustomTimeInput('');
        }
    };

    return (
        <View style={styles.container}>
            <Text style={styles.headerTitle}>Temporizador</Text>

            <View style={styles.timerContainer}>
                <TouchableOpacity
                    style={[styles.circle, { borderColor: theme }]}
                    onPress={toggleTimer}
                >
...
